--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,8 @@
-body {
+html, body {
     margin: 0;
     padding: 0;
+    height:100%;
+    width: 99%;
 }
 
 a {
@@ -35,31 +37,52 @@ a:link {
     margin: 1em;
 }
 
+#hangCatImg {
+    margin: 0 1em 0 4em;
+    width: 100%;
+    background: red;
+}
+
 #curWordField {
     text-align: center;
 }
 
 #hint_container {
     text-align: center;
+    margin-top : 4em;
 }
 
 #hint {
     width: 80%;
     margin: auto;
-    background: blue;
     font-size: 2em;
 }
 
 .answerLetterContainers {
     width: 8%;
-    margin: 0.3em;
+    margin: 0 0.3em;
     font-size: 3em;
     display: inline-block;
     text-align: center;
     border-bottom: 5px solid black;
 }
 
+#letters_container {
+    margin: 2em;
+}
+
 .letterBtns {
     width:9%;
     margin: 0.3em;
 }
+
+#buttons_container {
+    text-align: center;
+}
+
+.buttons {
+    width: 25%;
+    margin: 0.6em;
+    font-size: 1.3em;
+}
+
