--- a/style.css
+++ b/style.css
@@ -1,74 +1,120 @@
 html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%; }
+    margin: 0;
+    padding: 0;
+    height:100%;
+    width: 100%;
+}
 
-a {
-  text-decoration: none; }
+a { text-decoration: none;}
 
-a:link {
-  text-decoration: none; }
+a:link { text-decoration: none;}
+
+p { margin: 0;}
+
 
 /*********************Index.html**************************/
 #appName_container {
-  font-size: 3em; }
+    font-size: 3em;
+}
 
 #navbar {
-  text-align: right;
-  padding-top: 0.8em; }
+    text-align: right;
+    padding-top: 0.8em;
+}
 
 .navLinks {
-  font-size: 2em;
-  margin: 0.5em; }
+    font-size: 2em;
+    margin: 0.5em;
+}
 
 #playdata {
-  text-align: center; }
+    text-align: center;
+}
 
 #score, #trial {
-  font-size: 2em;
-  margin: 1em; }
+    font-size: 2em;
+    margin: 1em;
+}
 
 #hangCatImg {
-  margin: 0 1em 0 4em;
-  width: 100%;
-  background: red; }
+    margin: 0 1em 0 4em;
+    width: 100%;
+}
 
 #curWordField {
-  text-align: center; }
+    text-align: center;
+}
 
 #hint_container {
-  text-align: center;
-  margin-top: 4em; }
+    text-align: center;
+    margin-top : 4em;
+}
 
 #hint {
-  width: 80%;
-  margin: auto;
-  font-size: 2em; }
+    width: 80%;
+    margin: auto;
+    font-size: 2em;
+}
 
 .answerLetterContainers {
-  width: 8%;
-  margin: 0 0.3em;
-  font-size: 3em;
-  display: inline-block;
-  text-align: center;
-  border-bottom: 5px solid black; }
+    width: 8%;
+    margin: 0 0.3em;
+    font-size: 3em;
+    display: inline-block;
+    text-align: center;
+    border-bottom: 5px solid black;
+}
 
 #letters_container {
-  width: 90%;
-  margin: 3em auto;
-  padding-left: 3em; }
+    width: 90%;
+    margin: 3em auto;
+    padding-left: 3em;
+}
 
 .letterBtns {
-  width: 9%;
-  margin: 0.3em; }
+    width: 9%;
+    margin: 0.3em;
+}
 
 #buttons_container {
-  text-align: center; }
+    text-align: center;
+}
 
 .buttons {
-  width: 25%;
-  margin: 0.6em;
-  font-size: 1.3em; }
+    width: 25%;
+    margin: 0.6em;
+    font-size: 1.3em;
+}
 
-/*# sourceMappingURL=style.css.map */
+/************Modal Windows*************/
+
+.modalTitles {
+    font-size: 1.5em;
+}
+
+.inputAlerts {
+    font-size: 0.8em;
+    color: red;
+    visibility: hidden;
+}
+
+.modalInputs {
+    width: 70%;
+    margin-bottom: 0.5em;
+}
+
+.modalContents {
+    text-align: center;
+}
+
+.modalBtns {
+    width: 25%;
+    margin: auto;
+}
+
+#restartMessage, #gameoverMessage {
+    font-size: 1.5em;
+    font-weight: 800;
+}
+
+
