--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     height:100%;
     width: 100%;
+    font-family: 'Mali', cursive;
 }
 
 a { text-decoration: none;}
@@ -114,7 +115,9 @@ p { margin: 0;}
 
 #restartMessage, #gameoverMessage {
     font-size: 1.5em;
-    font-weight: 800;
+    font-weight: 300;
 }
 
-
+#restartImg, #gameOverImg {
+    width: 50%;
+}
