--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ p { margin: 0;}
     border-bottom: 5px solid black;
 }
 
+.answerLetters {
+    visibility: hidden;
+}
+
 #letters_container {
     width: 90%;
     margin: 2em auto;
