added current user's play summary on rank page, fixed several bugs

--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,13 @@ p { margin: 0;}
 #navbar, #userNavbar {
     text-align: right;
     padding-top: 0.8em;
+    display: none;
 }
 
 .navLinks {
     font-size: 2em;
-    margin: 0.5em;
-}
-
-#userNavbar {
-    display: none;
+    margin: 0.3em;
+    display: inline-block;
 }
 
 #playdata {
@@ -130,44 +128,22 @@ p { margin: 0;}
     width: 50%;
 }
 
-#toast {
-    visibility: hidden;
-    min-width: 250px;
-    margin-left: -125px;
-    background-color: #333;
-    color: #fff;
+/*********************rank.html**************************/
+#rank_body {
+    display: none;
     text-align: center;
-    border-radius: 2px;
-    padding: 16px;
-    position: fixed;
-    z-index: 1;
-    left: 50%;
-    bottom: 30px;
-    font-size: 17px;
-  }
-  
-  #toast.show {
-    visibility: visible;
-    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-    animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  }
-  
-  @-webkit-keyframes fadein {
-    from {bottom: 0; opacity: 0;} 
-    to {bottom: 30px; opacity: 1;}
-  }
-  
-  @keyframes fadein {
-    from {bottom: 0; opacity: 0;}
-    to {bottom: 30px; opacity: 1;}
-  }
-  
-  @-webkit-keyframes fadeout {
-    from {bottom: 30px; opacity: 1;} 
-    to {bottom: 0; opacity: 0;}
-  }
-  
-  @keyframes fadeout {
-    from {bottom: 30px; opacity: 1;}
-    to {bottom: 0; opacity: 0;}
-  }
+}
+
+h1.summaryHeaders {
+    font-weight: bold;
+    font-size: 2em;
+    margin: 0.3em;
+}
+
+.summaryHeaders {
+    font-size : 1.5em;
+}
+
+#summaryScore, #summaryTrial {
+    font-size : 1.3em;
+}
