--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,6 @@ p { margin: 0;}
 
 /*********************rank.html**************************/
 #rank_body {
-    display: none;
     text-align: center;
 }
 
@@ -156,6 +155,7 @@ p { margin: 0;}
     background-position: center;
     background-position-y: 1.5em;
     margin: 1em 0;
+    display: none;
 }
 
 h1.summaryHeaders {
@@ -171,6 +171,10 @@ h1.summaryHeaders {
 
 #summaryScore, #summaryTrial {
     font-size : 1.3em;
+}
+
+#tableField {
+    display: none;
 }
 
 /*********************Responsive Settings**********************/
